--- a/posts/_metadata.yml
+++ b/posts/_metadata.yml
@@ -6,3 +6,5 @@ freeze: true
 
 # Enable banner style title blocks
 title-block-banner: true
+
+# Change the color of title-block-banner to "#FFA500".
