--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,3 +17,11 @@ format:
 
 editor: visual
 
+# Change the background to a different color.
+# Add another hyperlink in the navigation bar.
+# Add your name to the left side of the top navigation bar.
+
+# Change to another Bootswatch theme.
+# Add a dark theme with another Bootswatch theme.
+# Change the syntax highlighting to `eiffel`.
+
